// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`service errors should return a collection of errors responses 1`] = `
Object {
  "badCredentials": [Function],
  "critical": [Function],
  "missing": [Function],
  "unauth": [Function],
  "unsecure": [Function],
}
`;

exports[`service errors should return a collection of errors responses 2`] = `
Object {
  "error": "Bad auth credentials",
}
`;

exports[`service errors should return a collection of errors responses 3`] = `
Object {
  "error": "Unknown internal critical error",
}
`;

exports[`service errors should return a collection of errors responses 4`] = `
Object {
  "error": "Missing or invalid Authorization header",
}
`;

exports[`service errors should return a collection of errors responses 5`] = `
Object {
  "error": "Missing or invalid API token",
}
`;

exports[`service errors should return a collection of errors responses 6`] = `
Object {
  "error": "Route not found. Never been here",
}
`;
